Nov 9th PU4 (Peter) - Fixed some bugs, PU2 had a LOT of bugs including classes suddenly working. Everything should be working now!
Nov 9th PU5 (Peter) - Attempt at fixing some bugs
Nov 9th PU6 (Peter) - Attempt de finale at fixing some bugs

Nov 9th Cls1 (Peter) - JFoucus 2 Build
Nov 9th Cls2 (Peter) - JFoucus 2 Build
Nov 9th Cls3 (Peter) - JFoucus 2 Bug Fix

Nov 10th MT1 (Peter) - Maintinence Update
Nov 10th MT2 (Peter) - Maintinence Update Complete

Nov 12th PU7 (Peter) - Deprecated remaining images
Nov 12th PU-pr8 (Peter) - Public Update Warning and Change Log Updates
Nov 12th PU8 (Peter) - Updates:
                        - Font changed to IBM Plex Mono (English and other language support in the future)
                        - Little more description about myself
                        - CSS and JavaScript are now in their own folders
                        - CSS used across multiple pages
                        - Looks a little more professional (noice)
                        - JFocus (School CS stuff) and JavaScript (Personal Webpage stuff) are properly seperated
                        - Directories Fixed Extensively
                        - Instagram and mail information included (Instagram follower policies remain the same)
                        - End of Term Project - Peter Go.zip Deprecation warning placed at the bottom of the screen
                        - MIT license enforced on all parts of the webpage
                        - SO EXCITED!!! (I should be sleeping, idc)
Nov 12th PU8 (Peter) - ISSData.html updated

Nov 14th Cls4 (Peter) - Created two files including Foci 3 and 3B
Nov 14th Cls5 (Peter) - Link made with main.html


Thanks for taking your time to read the change log! 
I might sound cold in many of the update descriptions, but it's like that just for time efficiency. 
Have a nice day! :)