@@ -13,15 +13,15 @@
     </body>
     <script>
         var name = prompt("Please enter your name: ");
-        document.getElementById("name").innerHTML = name;
+        document.getElementById("name").innerHTML = "Your name is " + name;
 
         var hometown = prompt("Please enter your hometown: ");
-        document.getElementById("hometown").innerHTML = hometown;
+        document.getElementById("hometown").innerHTML = "Your hometown is " + hometown;
 
         var age = prompt("Please enter your age: ");
-        document.getElementById("age").innerHTML = age;
+        document.getElementById("age").innerHTML = "You are " + age + " years old";
 
         var mail = prompt("Please enter your email address: ");
-        document.getElementById("mail").innerHTML = mail;
+        document.getElementById("mail").innerHTML = "Your email address is " + mail;
     </script>
 </html>
