@@ -16,7 +16,7 @@
             </p>
             <div class = "flexArticleInverse">
                 <a href = "javascript/JFocus3.html" class = "sourceCodeEmoji centerObj">
-                    Javascript Focus 2 🛠️
+                    Javascript Focus 3 🛠️
                     <p class = "postletter">(This button's href changes)</p>
                 </a>
                 <a href = "changeLog.html" class = "sourceCodeEmoji centerObj">
